--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <title>Flexbox</title>
     </head>
@@ -15,101 +14,78 @@
                 </div>
                 <div class="search-wrapper">
                     <input type="search" class="search" placeholder="Search for minimalist chair">
-                    <img src="img/Ellipse.png" alt="search-icon" class="search-img">
                 </div>
             </nav>
         </header>
         <main class="main-wrapper">
-            <div class="wrapper-of-wrapper-product">
-                <div class="product-wrapper">
-                    <div class="img-wrapper">
-                        <div class="discount">
-                            <div class="icon--50">
-                                <img src="img/sofa.png" alt="sofa">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h2 class="product-name">Lolito</h2>
-                        <p class="product-description">Luxury big sofa</p>
-                        <span class="product-price">Rp 7.000.000</span
-                        ><span class="product-price-old">Rp 14.000.000</span>
-                    </div>
+            <div class="product-item">
+                <div class="img-wrapper">
+                    <img src="img/sofa.png" alt="sofa">
+                    <div class="discount-wrapper"><span class="text-wrapper">-50%</span></div>
+                </div>
+                <div class="info">
+                    <h2 class="product-name">Lolito</h2>
+                    <p class="product-description">Luxury big sofa</p>
+                    <span class="product-price">Rp 7.000.000</span>
+                    <span class="product-price-old">Rp 14.000.000</span>
                 </div>
             </div
-            ><div class="wrapper-of-wrapper-product">
-                <div class="product-wrapper">
-                    <div class="img-wrapper">
-                        <div class="new">
-                            <div class="icon-New">
-                                <img src="img/arizona.jpg" alt="sofa">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h2 class="product-name">Arizona</h2>
-                        <p class="product-description">Multiple sofa</p>
-                        <span class="product-price">Rp 7.000.000</span>
-                    </div>
+            ><div class="product-item">
+                <div class="img-wrapper">
+                    <img src="img/arizona.jpg" alt="sofa">
+                    <div class="new-wrapper"><span class="text-wrapper">New</span></div>
+                </div>
+                <div class="info">
+                    <h2 class="product-name">Arizona</h2>
+                    <p class="product-description">Multiple sofa</p>
+                    <span class="product-price">Rp 7.000.000</span>
                 </div>
             </div
-            ><div class="wrapper-of-wrapper-product">
-                <div class="product-wrapper">
-                    <div class="img-wrapper">
-                        <img src="img/sofa.png" alt="sofa">
-                    </div>
-                    <div class="info">
-                        <h2 class="product-name">Lolito</h2>
-                        <p class="product-description">Luxury big sofa</p>
-                        <span class="product-price">Rp 7.000.000</span>
-                    </div>
+            ><div class="product-item">
+                <div class="img-wrapper">
+                    <img src="img/sofa.png" alt="sofa">
+                </div>
+                <div class="info">
+                    <h2 class="product-name">Lolito</h2>
+                    <p class="product-description">Luxury big sofa</p>
+                    <span class="product-price">Rp 7.000.000</span>
                 </div>
             </div
-            ><div class="wrapper-of-wrapper-product">
-                <div class="product-wrapper">
-                    <div class="img-wrapper">
-                        <div class="star">
-                            <div class="icon-Star">
-                                <img src="img/fan.png" alt="sofa">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h2 class="product-name">Respira</h2>
-                        <p class="product-description">Minimalist fan</p>
-                        <span class="product-price">Rp 500.000</span>
-                        <span class="product-price-old">Rp 750.000</span>
-                    </div>
+            ><div class="product-item">
+                <div class="img-wrapper">
+                    <img src="img/fan.png" alt="sofa">
+                    <div class="star-wrapper"></div>
+                </div>
+                <div class="info">
+                    <h2 class="product-name">Respira</h2>
+                    <p class="product-description">Minimalist fan</p>
+                    <span class="product-price">Rp 500.000</span>
+                    <span class="product-price-old">Rp 750.000</span>
                 </div>
             </div
-            ><div class="wrapper-of-wrapper-product">
-                <div class="product-wrapper">
-                    <div class="img-wrapper">
-                        <div class="new">
-                            <div class="icon-New">
-                                <img src="img/mercy.jpg" alt="sofa">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="info">
-                        <h2 class="product-name">Mercy</h2>
-                        <p class="product-description">Comfortable bed</p>
-                        <span class="product-price">Rp 7.000.000</span>
-                        <span class="product-price-old"></span>
-                    </div>
+            ><div class="product-item">
+                <div class="img-wrapper">
+                    <img src="img/victoria.webp" alt="sofa">
+                    <div class="new-wrapper"><span class="text-wrapper">New</span></div>
+                </div>
+                <div class="info">
+                    <h2 class="product-name">Victoria</h2>
+                    <p class="product-description">Comfortable bed</p>
+                    <span class="product-price">Rp 7.000.000</span>
+                    <span class="product-price-old"></span>
                 </div>
             </div>
         </main>
         <footer class="footer-wrapper">
             <nav class="navigation">
-                <div class="options">
-                    <a href="#" class="option">home</
-                    ><a href="#" class="option">about us</
-                    ><a href="#" class="option">products</
-                    ><a href="#" class="option">contacts</a>
+                <div class="footer-links">
+                    <a href="#" class="footer-link">home</a>
+                    <a href="#" class="footer-link">about us</a>
+                    <a href="#" class="footer-link">products</a>
+                    <a href="#" class="footer-link">contacts</a>
                 </div>
                 <div class="copyrights">
-                    <h3>Copyrights 2021</h3>
+                    <span>Copyrights 2021</span>
                 </div>
             </nav>
         </footer>
